# whisper-cli

./: LICENSE  README.md  pyproject.toml
whisper_cli/: env.py  main.py  utils.py
